tests/baselines/reference/classExtendsItself.errors.txt
classExtendsItself.ts(1,7): error TS2506: 'C' is referenced directly or indirectly in its own base expression.
classExtendsItself.ts(3,7): error TS2506: 'D' is referenced directly or indirectly in its own base expression.
classExtendsItself.ts(5,7): error TS2506: 'E' is referenced directly or indirectly in its own base expression.


==== classExtendsItself.ts (3 errors) ====
    class C extends C { } // error
          ~
!!! error TS2506: 'C' is referenced directly or indirectly in its own base expression.
    
    class D<T> extends D<T> { } // error
          ~
!!! error TS2506: 'D' is referenced directly or indirectly in its own base expression.
    
    class E<T> extends E<string> { } // error
          ~
!!! error TS2506: 'E' is referenced directly or indirectly in its own base expression.